# OracleGuard

./: .gitignore  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml
crates/oracleguard-adapter/: Cargo.toml
crates/oracleguard-adapter/examples/: build_intent_from_charli3.rs  build_live_scenario.rs  demo_full_loop.rs  verify_live_bundle.rs
crates/oracleguard-adapter/src/: artifacts.rs  cardano.rs  cardano_disburse.rs  charli3.rs  intake.rs  kupo.rs  lib.rs  settlement.rs  ziranity_submit.rs
crates/oracleguard-adapter/tests/: fulfillment_boundary.rs  routing_boundary.rs
crates/oracleguard-policy/: Cargo.toml
crates/oracleguard-policy/src/: authorize.rs  error.rs  evaluate.rs  lib.rs  math.rs
crates/oracleguard-policy/tests/: closure_proofs.rs  golden_evaluator.rs  provenance_non_interference.rs
crates/oracleguard-schemas/: Cargo.toml
crates/oracleguard-schemas/examples/: show_policy_ref.rs
crates/oracleguard-schemas/src/: effect.rs  encoding.rs  evidence.rs  gate.rs  intent.rs  lib.rs  oracle.rs  policy.rs  reason.rs  routing.rs
crates/oracleguard-schemas/tests/: provenance_non_interference.rs
crates/oracleguard-verifier/src/: bundle.rs  integrity.rs  lib.rs  replay.rs  report.rs
crates/oracleguard-verifier/tests/: verification_surface.rs
deploy/preprod/: ada-usd-preprod.example.yml
docs/: architecture.md  authority-routing.md  canonical-encoding.md  cluster-1-closeout.md  cluster-2-closeout.md  cluster-4-closeout.md  cluster-5-closeout.md  cluster-6-closeout.md  cluster-7-closeout.md  cluster-8-closeout.md  evaluator-contract.md  evaluator-fixtures.md  evidence-bundle.md  fulfillment-boundary.md  guardrails.md  oracle-boundary.md  policy-canonicalization.md  semantic-identity.md  verifier.md  ziranity-integration.md
fixtures/: intent_v1_golden.postcard  policy_v1.canonical.bytes  policy_v1.json
fixtures/authorize/: authorized_effect_golden.postcard
fixtures/cardano/: sample_disburse_cli_args.golden.txt
fixtures/charli3/: aggstate_v1_golden.capture.md  aggstate_v1_golden.cbor
fixtures/eval/: allow_700_ada_result.postcard
fixtures/evidence/: reject_non_ada_bundle.postcard  reject_pending_bundle.postcard
fixtures/kupo/: datum_sample.json  matches_ada_usd_sample.json
fixtures/routing/: disbursement_ocu_id.hex  sample_cli_args.golden.txt
integrations/ziranity/: Cargo.toml
integrations/ziranity/fixtures/: oracleguard-node.sample.toml
integrations/ziranity/fixtures/integration/: allow_700_ada_intent.postcard  allow_700_ada_result.postcard  deny_900_ada_intent.postcard  deny_900_ada_result.postcard
integrations/ziranity/src/: config.rs  lib.rs
integrations/ziranity/tests/: integration_fixtures.rs
scripts/: cardano_disburse.py  check_deps.sh  check_deps_negative_demo.sh  check_evidence_determinism.sh  check_fulfillment_determinism.sh  check_routing_determinism.sh  demo.sh  demo_guardrail.sh  deterministic_test.sh  show_oracle_settings.py
