[package]
name = "oracleguard-schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical public semantic types for OracleGuard."

[dependencies]
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[lints]
workspace = true
