[package]
name = "oracleguard-schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical public semantic types for OracleGuard."

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.5", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

[lints]
workspace = true
